# vertex-ai-chat-prompting-tablular-data-bq

backend/: main-with-langchain-with-langchain-state-context.py  main-with-langchain-without-history.py  main-with-langchain.py  main-with-raw-implementation.py  pyproject.toml  test_history.py  vertex-ai-claude-sample.py
frontend/: package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatContent.css  ChatContent.jsx
frontend/src/components/LoadingProgress/: LoadingProgress.css  LoadingProgress.jsx
frontend/src/pages/: ChatPage.css  ChatPage.jsx
