[tool.poetry]
name = "finops-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
google-cloud-bigquery = "^3.13.0"
google-cloud-aiplatform = "^1.36.0"
pandas = "^2.1.3"
pydantic = "^2.5.1"
python-dotenv = "^1.0.0"
langchain = "0.0.325"  # Specific version
langchain-experimental = "0.0.42"  # Specific version
langchain-google-vertexai = "0.0.6"
sqlalchemy-bigquery = "1.8.0"
db-dtypes = "^1.1.1"
langchain-community = "0.0.10"  # Add this