[tool.poetry]
name = "finops-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
google-cloud-bigquery = "^3.13.0"
google-cloud-aiplatform = "^1.36.0"
pandas = "^2.1.3"
pydantic = "^2.5.1"
python-dotenv = "^1.0.0"
sqlalchemy-bigquery = "1.8.0"
db-dtypes = "^1.1.1"
langchain = "^0.3.15"
langchain-experimental = "^0.3.4"
langchain-google-vertexai = "^2.0.11"
langchain-community = "^0.3.15"
langchain-core = "^0.3.31"
anthropic = "^0.43.1"
google-cloud-bigquery-storage = "^2.27.0"
langgraph = "^0.2.66"
